--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <p>This is paraghaph</p>
     <p>another paragraph tag</p>
 
+
+    <h2>This is heading 2</h2>
+    <p>This is paragraph2</p>
 </body>
 
 </html>
