added another tag in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
 </head>
 
 <body>
+
     <p>Added first paragraph</p>
+
+    <h1>This is heading </h1>
+    <p>This is paraghaph</p>
+    <p>another paragraph tag</p>
+
 </body>
 
 </html>
